<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group16.mad.com.triviaapp.MainActivity">

    <TextView
        android:text="@string/welcomeToTriviaAppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeToTriviaAppID"
        android:gravity="center"
        android:textColor="#000000"/>

    <Button
        android:text="@string/exitButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exitButtonID"
        android:textAllCaps="false"
        android:background="@color/aqua"
        android:minHeight="30dp"
        android:onClick="exitApp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_alignBaseline="@+id/startTriviaButtonID"
        android:layout_alignBottom="@+id/startTriviaButtonID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/startTriviaButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startTriviaButtonID"
        android:textAllCaps="false"
        android:minHeight="30dp"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="200dp"
        android:layout_alignParentBottom="true"
        android:onClick="startTrivia"
        android:background="@color/grey" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trivia"
        android:layout_marginTop="52dp"
        android:id="@+id/triviaLogoId"
        android:layout_below="@+id/welcomeToTriviaAppID"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <TextView
        android:text="@string/triviaReadyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/triviaLogoId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/triviaReadyTextId"
        android:textColor="#000000"
        android:visibility="invisible"/>


</RelativeLayout>
