<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group16.mad.com.triviaapp.TriviaActivity">

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:background="@color/aqua"
        android:minHeight="30dp"
        android:onClick="previousQuestion"
        android:text="@string/previousButton"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/questionTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/previousButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="260dp"
        android:text="TextView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/QId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/qLabel"
        android:textColor="#000000" />

    <RadioGroup
        android:id="@+id/choiceGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/questionTextID"
        android:layout_marginTop="40dp" />

    <Button
    android:id="@+id/nextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/aqua"
    android:minHeight="30dp"
    android:onClick="nextQuestion"
    android:text="@string/nextButton"
    android:textAllCaps="false"
    android:layout_alignBaseline="@+id/previousButton"
    android:layout_alignBottom="@+id/previousButton"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_marginRight="34dp"
    android:layout_marginEnd="34dp" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/aqua"
        android:minHeight="30dp"
        android:onClick="finish"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:layout_alignBaseline="@+id/nextButton"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_alignLeft="@+id/nextButton"
        android:layout_alignStart="@+id/nextButton"
        android:visibility="invisible"/>

    <TextView
        android:text="Time Left:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp" />

    <FrameLayout
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_below="@+id/QId"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_below="@+id/QId"
            android:layout_marginTop="1dp"
            app:srcCompat="@android:drawable/progress_horizontal"
            android:layout_centerHorizontal="true"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="60dp"
            android:id="@+id/progressBar"/>

        <TextView
            android:text="@string/loadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingID"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"/>

    </FrameLayout>

</RelativeLayout>
